--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 
 <head>
   <meta charset="UTF-8">
@@ -31,22 +31,22 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
+    <section id="map-container" aria-label = "Map of restaurant" role="application">
       <div id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+    <section id="restaurant-container" tabindex = "0" aria-label = "Restaurant information">
+      <h1 id="restaurant-name" tabindex = "0"></h1>
+      <img id="restaurant-img" tabindex = "0">
+      <p id="restaurant-cuisine" tabindex = "0"></p>
+      <p id="restaurant-address" tabindex = "0"></p>
+      <table id="restaurant-hours" tabindex = "0"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+      <ul id="reviews-list" tabindex = "0"></ul>
     </section>
     <!-- End reviews -->
   </main>
@@ -61,6 +61,7 @@
   <!-- Beginning scripts -->
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script type = "application/javascript" src = "js/Service_WorkerRegister.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
