--- a/index4.html
+++ b/index4.html
@@ -4,48 +4,46 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css"> <!--link to my CSS-->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Restaurant Reviews</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- to make page responsive-->
+  <title>Restaurant Reviews</title> <!--title of the web page-->
 </head>
 
 <body>
   <header>
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/">Restaurant Reviews</a></h1> <!--providing a link-->
     </nav>
   </header>
 
   <main id="maincontent">
     <section id="map-container">
-      <div id="map" aria-label = "Map of the restaurants" role = "application"></div>
+      <div id="map" aria-label = "Map of the restaurants" role = "application"></div> <!--aria label for accessibility-->
     </section>
     <section>
-      <div class="filter-options" tabindex="0" aria-label = "Filter results">
+      <div class="filter-options" tabindex="0" aria-label = "Filter the results"> <!--tabindex for focusing on element using keyboard-->
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" aria-label ="Select neighborhoods" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" aria-label ="Select neighborhoods" name="neighborhoods" onchange="updateRestaurants()"> <!--accessibility fixes-->
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" aria-label = "Select cuisines" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" aria-label = "Select cuisines" name="cuisines" onchange="updateRestaurants()"> <!--accessibility fixes-->
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list" tabindex="0" aria-label = "List of restaurants"></ul>
+      <ul id="restaurants-list" tabindex="0" aria-label = "List of restaurants"></ul> <!--accessibility fixes-->
     </section>
   </main>
 
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type = "application/javascript" charset = "utf-8" src = "js/Service_WorkerRegister.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <script type = "application/javascript" charset = "utf-8" src = "js/Service_WorkerRegister.js"></script> <!--link to JS file which registers service worker-->
+  <script type="application/javascript" charset="utf-8" src="js/main.js"></script> <!--link to my JS file-->
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
-
-<!-- why don't we need to connect restaurant_info.js?-->
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
 </body>
 
-</html>
+</html> <!--end of HTML-->
