--- a/restaurant.html
+++ b/restaurant.html
@@ -17,11 +17,11 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/" aria-label = "link to homepage" role = "navigation">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" > <!--the bar with 'home' and name of restaurant-->
-      <li><a href="/">Home</a></li>
+    <ul id="breadcrumb" role = "navigation" aria-label = "navigation"> <!--the bar with 'home' and name of restaurant-->
+      <li><a href="/" aria-label = "link to homepage" role = "navigation">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -37,16 +37,16 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container" tabindex = "0" aria-label = "Restaurant information">
-      <h1 id="restaurant-name" tabindex = "0"></h1> <!--tabindex for focusing using keyboard-->
-      <img id="restaurant-img" tabindex = "0"> <!--accessibility fixes-->
-      <p id="restaurant-cuisine" tabindex = "0"></p> <!--accessibility fixes-->
-      <p id="restaurant-address" tabindex = "0"></p> <!--accessibility fixes-->
-      <table id="restaurant-hours" tabindex = "0"></table> <!--accessibility fixes-->
+      <h1 id="restaurant-name" tabindex = "0" aria-label = "restaurant name"></h1> <!--tabindex for focusing using keyboard-->
+      <img id="restaurant-img" tabindex = "0" aria-label = "restaurant image"> <!--accessibility fixes-->
+      <p id="restaurant-cuisine" tabindex = "0" aria-label = "restaurant cuisine"></p> <!--accessibility fixes-->
+      <p id="restaurant-address" tabindex = "0" aria-label = "restaurant address"></p> <!--accessibility fixes-->
+      <table id="restaurant-hours" tabindex = "0" aria-label = "restaurant hours"></table> <!--accessibility fixes-->
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list" tabindex = "0"></ul> <!--accessibility fixes-->
+    <section id="reviews-container" aria-label="restaurant reviews">
+      <ul id="reviews-list" tabindex = "0" aria-label="reviews list"></ul> <!--accessibility fixes-->
     </section>
     <!-- End reviews -->
   </main>
@@ -54,7 +54,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2017 <a aria-label = "home" href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
